--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://chat.openai.com/*"],
+      "matches": ["https://chat.openai.com/*", "https://chatgpt.com/*"],
       "js": ["contentScript.js"]
     }
   ],
