--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
   "content_scripts": [
     {
       "matches": ["https://chat.openai.com/*", "https://chatgpt.com/*"],
-      "js": ["contentScript.js"]
+      "js": ["contentScript.js"],
+      "css": ["dummy.css"]
     }
   ],
   "icons": {
