Enhance UI and download functionality with custom folder support and progress tracking; replace dummy CSS with content-script styles

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     {
       "matches": ["https://chat.openai.com/*", "https://chatgpt.com/*"],
       "js": ["contentScript.js"],
-      "css": ["dummy.css"]
+      "css": ["content-script.css"]
     }
   ],
   "icons": {
