--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "ChatGPT Image Saver",
+  "name": "ChatGPT Bulk Image Downloader",
   "version": "1.1.0",
   "description": "Save images from ChatGPT conversations.",
   "permissions": ["downloads", "scripting", "activeTab"],
