--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatgpt-image-saver",
+  "name": "chatgpt-bulk-image-downloader",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
